src/objects/Program_Name__c.object
<CustomObject>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activation_Status__c</fullName>
        <label>Activation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Corporate_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CNCS_Corporate_Program__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Corporate Program</value>
            </filterItems>
            <infoMessage>Search for and Select the CNCS Corporate Program.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CNCS_Corporate_Program__c</referenceTo>
        <relationshipLabel>NCCC Programs</relationshipLabel>
        <relationshipName>NCCC_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>NCCC Program</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Corporate_Program__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Activation_Status__c</columns>
        <columns>Activation_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <role>Administrator</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_The_Things</fullName>
        <columns>NAME</columns>
        <columns>Activation_Date__c</columns>
        <columns>Activation_Status__c</columns>
        <columns>Corporate_Program__c</columns>
        <columns>End_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All The Things</label>
    </listViews>
    <nameField>
        <label>Program Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NCCC Programs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Activation_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Activation_Date__c  &lt;   Start_Date__c</errorConditionFormula>
        <errorDisplayField>Activation_Date__c</errorDisplayField>
        <errorMessage>The Activation Date must be the same as or after the Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Activation_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(    Activation_Status__c    , &apos;yes&apos;), ISBLANK(    Activation_Date__c    ))</errorConditionFormula>
        <errorDisplayField>Activation_Date__c</errorDisplayField>
        <errorMessage>An Activation Date must be entered if the Activation Status is &quot;Yes.&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c  &lt;=   Start_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>The End Date must be after the Start Date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Program_End_Date</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c  &lt;=   Activation_Date__c</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>The End Date must be after the Activation Date.</errorMessage>
    </validationRules>
</CustomObject>